Fixed scrollbar and score styles

--- a/styles.css
+++ b/styles.css
@@ -87,10 +87,10 @@ body {
     box-sizing: border-box;
     display: flex;
     justify-content: center;
-    align-items: center;
     text-align: center;
     transform: translate(0, -50%);
     margin-bottom: -10%;
+    filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.8));
 }
 
 .movie .score h3 {
@@ -122,13 +122,11 @@ body {
     }
 }
 
-/* Scrollbar styling */
+/* Scrollbar */
 ::-webkit-scrollbar {
     width: 15px;
 }
-::-webkit-scrollbar-track-piece {
-    background-color: transparent;
-}
 ::-webkit-scrollbar-thumb {
     background: var(--nav-color);
+    border-radius: 10px;
 }
